--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "GitHubFinder",
   "version": "1.0.0",
-  "description": "",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,10 +18,13 @@
   },
   "homepage": "https://github.com/IvansPhoto/GitHubFinder#readme",
   "dependencies": {
-    "graphql-request": "^1.8.2"
+    "graphql-request": "^1.8.2",
+    "node-sass": "^4.12.0"
   },
   "devDependencies": {
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6"
-  }
+  },
+  "main": "webpack.config.js",
+  "description": ""
 }
